# fastapi-sqlalchemy-mariadb

./: .editorconfig  .env-example  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yml  logging.ini  mypy.ini  newrelic.ini  pyproject.toml  pytest.ini  sonar-project.properties  start.sh
.github/workflows/: deploy.yml  lint.yml  tests_and_sonar.yml
iac/: .gitignore  .terraform.lock.hcl  README.md  main.tf  variables.tf
iac/modules/common/: README.md  alb.tf  outputs.tf  sg.tf  variables.tf
iac/modules/ecs/: README.md  listener.tf  main.tf  nsg.tf  role.tf  route.tf  tg.tf  variables.tf
iac/modules/todo-list/: README.md  main.tf  variable.tf
init/: 01.sql
src/: app.py  rest.py  settings.py
src/common/: enums.py  exceptions.py  pagination.py
src/database/: __init__.py  base_model.py
src/database/migrations/: __init__.py  config.py  env.py  revision.py  upgrade.py
src/database/migrations/versions/: f417de3eb662_.py
src/database/models/: todo.py
src/interfaces/: repository.py  schemas.py  services.py
src/tests/: conftest.py
src/tests/todo/: conftest.py  test_todo_controllers.py  test_todo_repository.py
